--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -12,13 +12,45 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
-                <input asp-for="Username" class="form-control" disabled />
+                <input asp-for="Username" class="form-control" />
                 <label asp-for="Username" class="form-label"></label>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.User_Fullname" class="form-control" />
+                <label asp-for="Input.User_Fullname" class="form-label"></label>
+                <span asp-validation-for="Input.User_Fullname" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                @if (@Model.Input.User_Gender == "Male")
+                {
+                    <input type="radio" asp-for="Input.User_Gender" value="Male" checked><label >Male</label><br>
+                    <input type="radio" asp-for="Input.User_Gender" value="Female"><label >Female</label><br>
+                }
+                else{
+                    <input type="radio" asp-for="Input.User_Gender" value="Male">
+                    <input type="radio" asp-for="Input.User_Gender" value="Female" checked> 
+                }             
+                <span asp-validation-for="Input.User_Gender" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.User_Address" class="form-control" />
+                <label asp-for="Input.User_Address" class="form-label"></label>
+                <span asp-validation-for="Input.User_Address" class="text-danger"></span>
             </div>
             <div class="form-floating">
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <label asp-for="Input.PhoneNumber" class="form-label"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.Email" class="form-control" disabled/>
+                <label asp-for="Input.Email" class="form-label"></label>
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.User_Birthdate" class="form-control" />
+                <label asp-for="Input.User_Birthdate" class="form-label"></label>
+                <span asp-validation-for="Input.User_Birthdate" class="text-danger"></span>
             </div>
             <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
         </form>
