Catch error input for all model

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -38,7 +38,7 @@
                 <span asp-validation-for="Input.User_Fullname" class="text-danger"></span>
             </div>
             <div class="form-floating">
-                <input type="radio" asp-for="Input.User_Gender" value="Male"> Male 
+                <input type="radio" asp-for="Input.User_Gender" value="Male" checked> Male 
                 <input type="radio" asp-for="Input.User_Gender" value="Female"> Female
                 <span asp-validation-for="Input.User_Gender" class="text-danger"></span>
             </div>
