Update lock out account function

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Cart</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="cart" asp-action="Index">Cart</a>
                             </li> 
                         }
 
