--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -35,7 +35,7 @@
                   </div>
                   
                   <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                    <a href="#" class="text-muted text-decoration-none">x</a>
+                    <a  class="text-muted text-decoration-none" asp-controller="Cart" asp-action="DeleteCart" asp-route-id="15">x</a>
                   </div>
                 </div>
                 }
