--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -65,229 +65,10 @@
 
 </section>
 
-@* book *@
-
-@* <section class="featured" id="featured">
-
-    <h1 class="heading"> <span>featured books</span> </h1>
-
-    
-       
-    <div class="featured-slider">
-        <div class="conatiner">
-            <div class="swiper-wrapper">
-
-
-                <div class="row">
-                    <div id="container">
-                        <div id="left">
-                            <div class="col-md-4">               
-                                <div class="swiper-slide box">
-                                    <div class="icons">
-                                        <a href="#" class="fas fa-search"></a>
-                                        <a href="#" class="fas fa-heart"></a>
-                                        <a href="#" class="fas fa-eye"></a>
-                                    </div>
-                                    <div class="image">
-                                        <img src="/img/book-1.png" alt="">
-                                    </div>
-                                    <div class="content">
-                                        <h3>featured books</h3>
-                                        <div class="price">$15.99 <span>$20.99</span></div>
-                                        <a href="#" class="btn">add to cart</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    
-                        <div id="center">
-                            <div class="col-md-4">
-                                <div class="swiper-slide box">
-                                    <div class="icons">
-                                        <a href="#" class="fas fa-search"></a>
-                                        <a href="#" class="fas fa-heart"></a>
-                                        <a href="#" class="fas fa-eye"></a>
-                                    </div>
-                                    <div class="image">
-                                        <img src="/img/book-2.png" alt="">
-                                    </div>
-                                    <div class="content">
-                                        <h3>featured books</h3>
-                                        <div class="price">$15.99 <span>$20.99</span></div>
-                                        <a href="#" class="btn">add to cart</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div id="right">
-                            <div class="col-md-4">
-                                <div class="swiper-slide box">
-                                    <div class="icons">
-                                        <a href="#" class="fas fa-search"></a>
-                                        <a href="#" class="fas fa-heart"></a>
-                                        <a href="#" class="fas fa-eye"></a>
-                                    </div>
-                                    <div class="image">
-                                        <img src="/img/book-3.png" alt="">
-                                    </div>
-                                    <div class="content">
-                                        <h3>featured books</h3>
-                                        <div class="price">$15.99 <span>$20.99</span></div>
-                                        <a href="#" class="btn">add to cart</a>
-                                    </div>
-                                </div>  
-                            </div>
-                        </div>             
-            
-                    </div>
-                </div>
-
-                <br>
-                <div class="row">
-                    <div id="container">
-                        <div id="left">
-                            <div class="col-md-4">               
-                                <div class="swiper-slide box">
-                                    <div class="icons">
-                                        <a href="#" class="fas fa-search"></a>
-                                        <a href="#" class="fas fa-heart"></a>
-                                        <a href="#" class="fas fa-eye"></a>
-                                    </div>
-                                    <div class="image">
-                                        <img src="/img/book-4.png" alt="">
-                                    </div>
-                                    <div class="content">
-                                        <h3>featured books</h3>
-                                        <div class="price">$15.99 <span>$20.99</span></div>
-                                        <a href="#" class="btn">add to cart</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    
-                        <div id="center">
-                            <div class="col-md-4">
-                                <div class="swiper-slide box">
-                                    <div class="icons">
-                                        <a href="#" class="fas fa-search"></a>
-                                        <a href="#" class="fas fa-heart"></a>
-                                        <a href="#" class="fas fa-eye"></a>
-                                    </div>
-                                    <div class="image">
-                                        <img src="/img/book-5.png" alt="">
-                                    </div>
-                                    <div class="content">
-                                        <h3>featured books</h3>
-                                        <div class="price">$15.99 <span>$20.99</span></div>
-                                        <a href="#" class="btn">add to cart</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div id="right">
-                            <div class="col-md-4">
-                                <div class="swiper-slide box">
-                                    <div class="icons">
-                                        <a href="#" class="fas fa-search"></a>
-                                        <a href="#" class="fas fa-heart"></a>
-                                        <a href="#" class="fas fa-eye"></a>
-                                    </div>
-                                    <div class="image">
-                                        <img src="/img/book-6.png" alt="">
-                                    </div>
-                                    <div class="content">
-                                        <h3>featured books</h3>
-                                        <div class="price">$15.99 <span>$20.99</span></div>
-                                        <a href="#" class="btn">add to cart</a>
-                                    </div>
-                                </div>  
-                            </div>
-                        </div>             
-            
-                    </div>
-                </div>
-
-                <br>
-
-                <div class="row">
-                    <div id="container">
-                        <div id="left">
-                            <div class="col-md-4">               
-                                <div class="swiper-slide box">
-                                    <div class="icons">
-                                        <a href="#" class="fas fa-search"></a>
-                                        <a href="#" class="fas fa-heart"></a>
-                                        <a href="#" class="fas fa-eye"></a>
-                                    </div>
-                                    <div class="image">
-                                        <img src="/img/book-7.png" alt="">
-                                    </div>
-                                    <div class="content">
-                                        <h3>featured books</h3>
-                                        <div class="price">$15.99 <span>$20.99</span></div>
-                                        <a href="#" class="btn">add to cart</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    
-                        <div id="center">
-                            <div class="col-md-4">
-                                <div class="swiper-slide box">
-                                    <div class="icons">
-                                        <a href="#" class="fas fa-search"></a>
-                                        <a href="#" class="fas fa-heart"></a>
-                                        <a href="#" class="fas fa-eye"></a>
-                                    </div>
-                                    <div class="image">
-                                        <img src="/img/book-8.png" alt="">
-                                    </div>
-                                    <div class="content">
-                                        <h3>featured books</h3>
-                                        <div class="price">$15.99 <span>$20.99</span></div>
-                                        <a href="#" class="btn">add to cart</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div id="right">
-                            <div class="col-md-4">
-                                <div class="swiper-slide box">
-                                    <div class="icons">
-                                        <a href="#" class="fas fa-search"></a>
-                                        <a href="#" class="fas fa-heart"></a>
-                                        <a href="#" class="fas fa-eye"></a>
-                                    </div>
-                                    <div class="image">
-                                        <img src="/img/book-9.png" alt="">
-                                    </div>
-                                    <div class="content">
-                                        <h3>featured books</h3>
-                                        <div class="price">$15.99 <span>$20.99</span></div>
-                                        <a href="#" class="btn">add to cart</a>
-                                    </div>
-                                </div>  
-                            </div>
-                        </div>             
-            
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section> *@
 <div class = "container">
  <section class="featured" id="featured">
 
-    <h1 class="heading"> <span>featured books</span> </h1>
-    @* <div class="container"> *@
-        
-            @* <div class="col-lg-6"> *@
-
-            
+    <h1 class="heading"> <span>featured books</span> </h1>        
 
     <div class="swiper featured-slider">
 
@@ -305,7 +86,7 @@
                 <div class="content">
                     <h3>featured books</h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <a class="btn" asp-controller="Cart" asp-action="AddToCart" asp-route-id="3">Add to cart</a>
                 </div>
             </div>
 
