--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,32 +10,11 @@
     <link rel="stylesheet" href="~/LoginFPTBook.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LoginFPTBook</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="cart" asp-action="Index">Cart</a>
-                            </li> 
-                        }
+    <header class="header">
 
     <div class="header-1">
 
-        <a href="#" class="logo"> <i class="fas fa-book"></i> FPTBook </a>
+        <a class="logo"> <i class="fas fa-book"></i> FPTBook </a>
 
         <form action="" class="search-form">
             <input type="search" name="" placeholder="search here..." id="search-box">
@@ -45,13 +24,18 @@
         <div class="icons">
             <div id="search-btn" class="fas fa-search"></div>
             <a href="#" class="fas fa-heart"></a>
-            <a href="#" class="fas fa-shopping-cart"></a>
+            <a class="fas fa-shopping-cart" asp-controller="Cart" asp-action="Index"></a>
                 <div class="dropdowns fas fa-user">
                 <div class="content_dropdowns">
+                @if (User.Identity.IsAuthenticated)
+                {
                   <a asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
+                  <a href="#" >Log out</a>
+                }
+                else{
                   <a asp-area="Identity" asp-page="/Account/Register">Register</a>
                   <a asp-area="Identity" asp-page="/Account/Login">Log in</a>
-                  <a href="#" >Log out</a>
+                }            
                 </div>
             </div>
         </div>
