--- a/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -5,7 +5,20 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h3>@ViewData["Title"]</h3>
+<style>
+    h2{
+        display: block;
+        padding-left: 200px;
+        padding-top: 10px;
+    }
+
+    #change-password-form{
+        padding-left: 100px;
+    }
+
+</style>
+
+<h2>Change Password</h2>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
@@ -16,11 +29,13 @@
                 <label asp-for="Input.OldPassword" class="form-label"></label>
                 <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
             </div>
+            <br>
             <div class="form-floating">
                 <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.NewPassword" class="form-label"></label>
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
+            <br>
             <div class="form-floating">
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.ConfirmPassword" class="form-label"></label>
