--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,7 +5,23 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h3>@ViewData["Title"]</h3>
+<style>
+    h2{
+        display: block;
+        padding-left: 250px;
+        padding-top: 10px;
+    }
+
+    #profile-form{
+        padding-left: 100px;
+    }
+
+    .gender{
+        display: flex;
+    }
+</style>
+
+<h2>Profile</h2>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
@@ -15,16 +31,24 @@
                 <input asp-for="Username" class="form-control" />
                 <label asp-for="Username" class="form-label"></label>
             </div>
+            <br>
             <div class="form-floating">
                 <input asp-for="Input.User_Fullname" class="form-control" />
                 <label asp-for="Input.User_Fullname" class="form-label"></label>
                 <span asp-validation-for="Input.User_Fullname" class="text-danger"></span>
             </div>
+            <br><label>Gender:</label>
             <div class="form-floating">
+                
                 @if (@Model.Input.User_Gender == "Male")
-                {
-                    <input type="radio" asp-for="Input.User_Gender" value="Male" checked><label >Male</label><br>
-                    <input type="radio" asp-for="Input.User_Gender" value="Female"><label >Female</label><br>
+                {   
+                    <div class="gender">
+                        <input type="radio" asp-for="Input.User_Gender" value="Male" checked>Male
+                        <p style="color: #5795b3;">..................</p><br><br> 
+                         
+                        <input type="radio" asp-for="Input.User_Gender" value="Female">Female
+                    </div>
+                    
                 }
                 else{
                     <input type="radio" asp-for="Input.User_Gender" value="Male">
@@ -32,27 +56,33 @@
                 }             
                 <span asp-validation-for="Input.User_Gender" class="text-danger"></span>
             </div>
+            <br>
             <div class="form-floating">
                 <input asp-for="Input.User_Address" class="form-control" />
                 <label asp-for="Input.User_Address" class="form-label"></label>
                 <span asp-validation-for="Input.User_Address" class="text-danger"></span>
             </div>
+            <br>
             <div class="form-floating">
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <label asp-for="Input.PhoneNumber" class="form-label"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
+            <br>
             <div class="form-floating">
                 <input asp-for="Input.Email" class="form-control" disabled/>
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+            <br>
             <div class="form-floating">
                 <input asp-for="Input.User_Birthdate" class="form-control" />
                 <label asp-for="Input.User_Birthdate" class="form-label"></label>
                 <span asp-validation-for="Input.User_Birthdate" class="text-danger"></span>
             </div>
+            <br>
             <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+            <br>
         </form>
     </div>
 </div>
