--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -41,7 +41,7 @@
                   </div>
                   
                   <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                    <a  class="text-muted text-decoration-none" asp-controller="Cart" asp-action="DeleteCart" asp-route-id="15">x</a>
+                    <a  class="text-muted text-decoration-none" asp-controller="Cart" asp-action="DeleteCart" asp-route-id="@c.CartDetail_ID">x</a>
                   </div>
                 </div>
                 }
