--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                 <div class="content_dropdown">
                   <a href="#">Account</a>
                   <a asp-controller="Publisher" asp-action="Index">Publisher</a>
-                  <a href="#">Statistical</a>
+                  <a asp-controller="Statistics" asp-action="Index">Statistical</a>
                   <a href="#">Order</a>
                   <a href="#">Category</a>
                   <a href="#">Book</a>
