--- a/Views/Home/OrderHistory.cshtml
+++ b/Views/Home/OrderHistory.cshtml
@@ -1,3 +1,5 @@
+@model IEnumerable<Order>
+
 @{
     ViewData["Title"] = "OrderHistory";
 }
@@ -30,19 +32,46 @@
                             </tr>
                         </thead>
                         <tbody>
-                           
+                            @foreach (var o in Model)
+                            {
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td>@o.Order_ID</td>
+                                    <td>@o.Order_OrderDate</td>
+                                    <td>@o.Order_DeliveryDate</td>
+                                    <td>@o.ApplicationUser.User_Address</td>
                                     <td>
-                                        <a class="btn btn-outline-primary rounded-pill"> Buy More </a>
-                                        <a class="btn btn-outline-primary rounded-pill"> Cancel </a>
+                                        @{
+                                            var payment = 0;
+
+                                            foreach (var p in @o.OrderDetail)
+                                            {
+                                                int quantity = Convert.ToInt32(p.OrderDetail_Quantity);
+                                                int price = Convert.ToInt32(p.OrderDetail_Price);
+                                                payment = payment + (price*quantity);
+                                            }
+                                        }
+                                        @payment
                                     </td>
-                                
+                                    @if (@o.Order_Status == 0)
+                                        {
+                                    <td>                     
+                                        Waiting Accept                                   
+                                    </td>
+                                     }
+                                    else{
+                                        <td>
+                                            Delivering
+                                        </td>                                        
+                                     }
+                                    <td>
+                                        @if (@o.Order_Status == 0)
+                                        {
+                                            <a class="btn btn-outline-primary rounded-pill"> Cancel</a>  
+                                        }
+                                        <a class="btn btn-outline-primary rounded-pill"> Buy More </a>
+                                    </td>
+                                </tr>
+                            }                                                                                  
                         </tbody>
                     </table>
                 </div>
