--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                   <a asp-controller="Statistics" asp-action="Index">Statistical</a>
                   <a href="#">Order</a>
                   <a href="#">Category</a>
-                  <a href="#">Book</a>
+                  <a asp-controller="Book" asp-action="Index">Book</a>
                 </div>
               </div>
         </nav>
