--- a/Views/Book/addBook.cshtml
+++ b/Views/Book/addBook.cshtml
@@ -99,9 +99,9 @@
             </div>
 
             <br>
-            <p>Publisher Date:</p>
-            <div class="form-floating">
-                <input id="timeTo" class="form-control" type="date" name="timeTo" value ="" style="width:200px"/>
+            <div class="form-floating"><p>Publisher Date:</p> 
+                <input type="date"> 
+                <span class="text-danger"></span>
             </div>
             <br>
             
