--- a/Views/Publisher/updatePublisher.cshtml
+++ b/Views/Publisher/updatePublisher.cshtml
@@ -11,7 +11,7 @@
         padding-left: 150px;
         padding-right: 150px;
     }
-    .btnAdd{
+    .btnUpdate{
         display: flex;
         text-align: center;
     }
@@ -68,7 +68,7 @@
                 <span class="text-danger"></span>
             </div> *@
             
-             <div class="btnAdd">
+             <div class="btnUpdate">
                 <button id="addSubmit" type="submit" class="w-10 btn btn-lg btn-primary">Add</button>
              </div>              
         </form>
