--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                   <a href="#">Account</a>
                   <a asp-controller="Publisher" asp-action="Index">Publisher</a>
                   <a asp-controller="Statistics" asp-action="Index">Statistical</a>
-                  <a href="#">Order</a>
+                  <a asp-controller="Order" asp-action="Index">Order</a>
                   <a href="#">Category</a>
                   <a asp-controller="Book" asp-action="Index">Book</a>
                 </div>
