--- a/Views/Book/updateBook.cshtml
+++ b/Views/Book/updateBook.cshtml
@@ -11,7 +11,7 @@
         padding-left: 150px;
         padding-right: 150px;
     }
-    .btnAdd{
+    .btnUpdate{
         display: flex;
         text-align: center;
     }
@@ -105,7 +105,7 @@
             </div>
             <br>
             
-             <div class="btnAdd">
+             <div class="btnUpdate">
                 <button id="addSubmit" type="submit" class="w-10 btn btn-lg btn-primary">Update</button>
              </div>              
         </form>
