--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
             <div class="dropdown">
                 <button class="button_dropdown">Management</button>
                 <div class="content_dropdown">
-                  <a href="#">Account</a>
+                  <a asp-controller="Account" asp-action="Index">Account</a>
                   <a asp-controller="Publisher" asp-action="Index">Publisher</a>
                   <a asp-controller="Statistics" asp-action="Index">Statistical</a>
                   <a asp-controller="Order" asp-action="Index">Order</a>
