Result for Search Interface

--- a/Views/Order/Index.cshtml
+++ b/Views/Order/Index.cshtml
@@ -4,7 +4,8 @@
 
 <div id="main">     
                 <div className="page-heading pb-2 mt-4 mb-2 ">
-                    <h3>Manage Order</h3> <a asp-controller="Home" asp-action="Index"><button type="button" class="btn btn-outline-primary">HomePage</button></a>
+                    <h3>Manage Order</h3> <a asp-controller="Home" asp-action="Index">
+                        <button type="button" class="btn btn-outline-primary">HomePage</button></a>
                 </div>
                 <div class="page-content">
                 <div class="container mb-3">
