--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,8 +17,10 @@
         <a class="logo"> <i class="fas fa-book"></i> FPTBook </a>
 
         <form action="" class="search-form">
-            <input type="search" name="" placeholder="search here..." id="search-box">
-            <label for="search-box" class="fas fa-search"></label>
+            
+            <input type="search" name="" placeholder="Search here..." id="search-box">
+            <a asp-controller="Home" asp-action="resultForSearch">
+            <label for="search-box" class="fas fa-search"></label></a>
         </form>
 
         <div class="icons">
