--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                   <a asp-controller="Publisher" asp-action="Index">Publisher</a>
                   <a asp-controller="Statistics" asp-action="Index">Statistical</a>
                   <a asp-controller="Order" asp-action="Index">Order</a>
-                  <a href="#">Category</a>
+                  <a asp-controller="Category" asp-action="Index">Category</a>
                   <a asp-controller="Book" asp-action="Index">Book</a>
                 </div>
               </div>
