--- a/Views/Order/Index.cshtml
+++ b/Views/Order/Index.cshtml
@@ -13,7 +13,7 @@
                         <thead>
                             <tr>
                             <th scope="col">ID</th>
-                            <th scope="col">User Name</th>
+                            <th scope="col">User FullName</th>
                             <th scope="col">Order Date</th>
                             <th scope="col">Delivery Date</th>
                             <th scope="col">Address</th>
