--- a/Views/Order/orderDetail.cshtml
+++ b/Views/Order/orderDetail.cshtml
@@ -35,7 +35,7 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                            <th scope="col">User Name</th>
+                            <th scope="col">User FullName</th>
                             <th scope="col">Order Date</th>
                             <th scope="col">Delivery Date</th>
                             <th scope="col">Address</th>
