--- a/Views/Account/updateAccount.cshtml
+++ b/Views/Account/updateAccount.cshtml
@@ -31,7 +31,7 @@
             <br>
             <div class="form-floating">
                 <input  class="form-control" aria-required="true" />
-                <label >UserName</label>
+                <label >FullName</label>
                 <span  class="text-danger"></span>
             </div>
             <br>
